---
title: Citeframe Current Implemented ER
---
erDiagram
    USERS {
        varchar id PK
        varchar email
        varchar name
        varchar password_hash
        varchar avatar_url
        timestamptz created_at
        timestamptz updated_at
    }

    WORKSPACES {
        varchar id PK
        varchar name
        text description
        varchar created_by_user_id FK
        timestamptz archived_at
        timestamptz created_at
        timestamptz updated_at
    }

    WORKSPACE_MEMBERSHIPS {
        varchar id PK
        varchar workspace_id FK
        varchar user_id FK
        varchar role
        timestamptz created_at
    }

    DOCUMENTS {
        varchar id PK
        varchar workspace_id FK
        varchar created_by_user_id FK
        varchar source_filename
        varchar object_key
        bigint byte_size
        varchar status
        timestamptz deleted_at
        timestamptz created_at
        timestamptz updated_at
    }

    INGESTION_JOBS {
        varchar id PK
        varchar workspace_id FK
        varchar document_id FK
        varchar job_type
        varchar status
        int attempt_count
        timestamptz queued_at
        timestamptz created_at
    }

    DOCUMENT_PAGES {
        varchar id PK
        varchar workspace_id FK
        varchar document_id FK
        int page_number
        text extracted_text
        int char_count
        json ocr_blocks
        timestamptz created_at
    }

    DOCUMENT_CHUNKS {
        varchar id PK
        varchar workspace_id FK
        varchar document_id FK
        varchar page_id FK
        int chunk_index
        text chunk_text
        int token_count
        int char_start
        int char_end
        int index_version
        timestamptz created_at
    }

    CHAT_THREADS {
        varchar id PK
        varchar workspace_id FK
        varchar created_by_user_id FK
        varchar title
        varchar active_message_id FK
        timestamptz archived_at
        timestamptz last_message_at
        timestamptz created_at
    }

    CHAT_MESSAGES {
        varchar id PK
        varchar workspace_id FK
        varchar thread_id FK
        varchar parent_message_id FK
        varchar role
        text content
        varchar status
        timestamptz created_at
    }

    MESSAGE_CITATIONS {
        varchar id PK
        varchar workspace_id FK
        varchar message_id FK
        varchar document_id FK
        varchar chunk_id FK
        int citation_index
        int page_number_snapshot
        varchar document_title_snapshot
        text excerpt_snapshot
    }

    NOTES {
        varchar id PK
        varchar workspace_id FK
        varchar created_by_user_id FK
        varchar updated_by_user_id FK
        varchar title
        text body_md
        boolean is_pinned
        timestamptz archived_at
        timestamptz created_at
        timestamptz updated_at
    }

    NOTE_SOURCES {
        varchar id PK
        varchar workspace_id FK
        varchar note_id FK
        varchar message_citation_id FK
        varchar document_id FK
        int source_order
        int page_number_snapshot
        text excerpt_snapshot
    }

    TAGS {
        varchar id PK
        varchar workspace_id FK
        varchar name
        varchar slug
        varchar color
        varchar created_by_user_id FK
        timestamptz created_at
    }

    DOCUMENT_TAGS {
        varchar id PK
        varchar workspace_id FK
        varchar document_id FK
        varchar tag_id FK
        timestamptz created_at
    }

    NOTE_TAGS {
        varchar id PK
        varchar workspace_id FK
        varchar note_id FK
        varchar tag_id FK
        timestamptz created_at
    }

    USERS ||--o{ WORKSPACES : creates
    USERS ||--o{ WORKSPACE_MEMBERSHIPS : joins
    WORKSPACES ||--o{ WORKSPACE_MEMBERSHIPS : has
    WORKSPACES ||--o{ DOCUMENTS : owns
    USERS ||--o{ DOCUMENTS : uploads
    DOCUMENTS ||--o{ INGESTION_JOBS : queued_as
    DOCUMENTS ||--o{ DOCUMENT_PAGES : contains
    DOCUMENTS ||--o{ DOCUMENT_CHUNKS : indexes
    DOCUMENT_PAGES ||--o{ DOCUMENT_CHUNKS : splits_into
    WORKSPACES ||--o{ INGESTION_JOBS : contains
    WORKSPACES ||--o{ CHAT_THREADS : owns
    USERS ||--o{ CHAT_THREADS : starts
    CHAT_THREADS ||--o{ CHAT_MESSAGES : contains
    CHAT_THREADS ||--o| CHAT_MESSAGES : active_leaf
    CHAT_MESSAGES ||--o{ CHAT_MESSAGES : branches
    CHAT_MESSAGES ||--o{ MESSAGE_CITATIONS : cites
    DOCUMENTS ||--o{ MESSAGE_CITATIONS : sourced_from
    DOCUMENT_CHUNKS ||--o{ MESSAGE_CITATIONS : sourced_from
    WORKSPACES ||--o{ NOTES : owns
    USERS ||--o{ NOTES : writes
    NOTES ||--o{ NOTE_SOURCES : cites
    MESSAGE_CITATIONS ||--o{ NOTE_SOURCES : source_for
    WORKSPACES ||--o{ TAGS : defines
    DOCUMENTS ||--o{ DOCUMENT_TAGS : tagged
    TAGS ||--o{ DOCUMENT_TAGS : applied_to
    NOTES ||--o{ NOTE_TAGS : tagged
    TAGS ||--o{ NOTE_TAGS : applied_to
